# picto

./: PM.md
backend/data/: pictogram_data.json
backend/data/chroma_db/16deb489-1255-4d2d-8e9f-76b71c08e20b/: index_metadata.pickle
backend/data/chroma_db/3027f831-13b4-4070-b4fe-cc2e06439426/: index_metadata.pickle
backend/data/chroma_db/30409830-bc7b-4837-b72e-27fbecc63467/: index_metadata.pickle
backend/data/chroma_db/c1763719-dbc6-481b-be63-fdf71e596319/: index_metadata.pickle
backend/data/chroma_db/e90c0e5c-082e-46ab-b73a-40e307453c79/: index_metadata.pickle
backend/data/chroma_db/f4f7942e-0050-47ba-a075-799e8ec83b4f/: index_metadata.pickle
backend/data/chroma_db/f906b4c5-4099-4102-a78c-d82c090e7b73/: index_metadata.pickle
img/nl/: LICENSE
indexer/: DESIGN.md  db.json  pyproject.toml  temp_requirements.txt
indexer/src/: DESIGN.md
indexer/src/picto_indexer/: cli.py  enricher.py  exceptions.py  file_io.py  gemini_client.py  logger.py  vectorizer.py
indexer/tests/: mock_db.json  test_cli.py  test_enricher.py  test_vectorizer.py
