[project]
name = "picto-indexer"
version = "0.3.0"
description = "A tool to enrich pictograms and build a vector search index."
dependencies = [
    "google-generativeai",
    "tqdm",
    "rich",
    "Pillow",
    "sentence-transformers",
    "chromadb",
    "numpy"
]

[project.scripts]
build-picto-index = "picto_indexer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]
